--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    shared_preferences: ^2.0.13
   flutter_svg: ^0.22.0
   dropdown_search: ^1.1.0
 
